[package]
name = "bevy_games_0_16"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking", "bevy_dev_tools", "bevy_remote", "configurable_error_handler"] }
bevy_framepace = "0.19"
rand = "0.9.1"
rand_chacha = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3